# chat-app-api

./: README.md  pyproject.toml
src/: main.py
src/controllers/: authentication_services.py  user_services.py
src/core/: config.py
src/database/: connect.py  models.py
src/middleware/: islogin.py
src/routes/: auth.py  home.py  users.py
src/schemas/: schemas.py
